chore: remove iichan treads

--- a/src/content/blog/3-start.mdx
+++ b/src/content/blog/3-start.mdx
@@ -20,7 +20,7 @@ pubDate: '24 Jan 2025'
 Но помните, что поощряться в любом случае будет наиболее оригинальное исполнение.
 
 Также крайне желательно, чтобы вы, как участник, делали посты с прогрессом хотя бы раз в пару дней.
-Для этого существуют форумный канал #devlogs на нашем [сервере в Discord](https://discord.gg/FNFnJVCZA9), а также треды на Дваче и Ычане. Никому не понравится, если ваша игра возьмётся из ниоткуда и сразу в максимально "готовом" состоянии.
+Для этого существуют форумный канал #devlogs на нашем [сервере в Discord](https://discord.gg/FNFnJVCZA9), а также треды на Дваче. Никому не понравится, если ваша игра возьмётся из ниоткуда и сразу в максимально "готовом" состоянии.
 
 ---
 
