feat: final extra day

--- a/src/content/blog/5-demo.mdx
+++ b/src/content/blog/5-demo.mdx
@@ -10,6 +10,8 @@ import { games } from '../../data/games-demo.ts';
 
 Финальную версию игры нужно отправить до **7 февраля, 23:59 МСК** включительно.
 
+UPD: Срок сдачи финальных версий продлён до **10 февраля, 23:59 МСК**.
+
 Скачать игры одним архивом - [drive.google.com](https://drive.google.com/file/d/18PmkhquKhkex-8Dp7hp1S0T6bgUxepna/view?usp=sharing) (3.2 Гб).
 
 <GamesList gamesList={games} />
