--- a/src/content/blog/9-final.mdx
+++ b/src/content/blog/9-final.mdx
@@ -10,6 +10,8 @@ import { games } from '../../data/games-final.ts';
 
 Участникам даётся время поиграть во всё, или посмотреть стримы, до пятницы **(14 февраля)**. Затем им на почты, с которых были отправлены финальные версии, будет отправлена форма для голосования, которое будет длиться ещё 2 дня.
 
+UPD: [Форма голосования](https://forms.gle/g4ELcx2gyj6g1pmT8) опубликована раньше. Проголосовать нужно до **16 февраля 2025, 23:59 МСК** включительно.
+
 Скачать игры одним архивом - [drive.google.com](https://drive.google.com/file/d/1Z4SgYwIPZzSJbivHzMKMhb1XFcKNS3n9/view?usp=sharing) (2 Гб).
 
 <GamesList gamesList={games} />
